--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/slider": "^2.0.8",
     "axios": "^0.19.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
