--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.4",
     "react-navigation": "^4.1.1",
+    "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
